@@ -388,6 +388,23 @@ sub get_default_collation
 	return exists($I18L->{$langid}) ? $I18L->{$langid}->{collate} : undef;
 }
 
+# Not supported by DBD::mysql?
+sub get_primary_key
+{
+	my( $self, $table ) = @_;
+
+	my $sth = $self->prepare( "DESCRIBE ".$self->quote_identifier($table) );
+	$sth->execute;
+
+	my @COLS;
+	while(my $row = $sth->fetch)
+	{
+		push @COLS, $row->[0] if $row->[3] eq 'PRI';
+	}
+
+	return @COLS;
+}
+
 1; # For use/require success
 
 ######################################################################
